<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity"
        android:background="@color/backgroundColor">
    <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/back"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:scaleType="fitCenter"
            android:background="@color/backgroundColor"/>

    <TableLayout
            android:id="@+id/tabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp">
        <TableRow>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_span="7"
                    android:gravity="center_horizontal"
                    android:text="@string/settings"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/userName"
                    android:text="@string/user_name"
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/userUserName"
                    android:layout_span="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
            <ImageButton
                    android:id="@+id/changeNameButton"
                    app:srcCompat="@drawable/settings"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:background="@color/backgroundColor"
                    android:scaleType="fitCenter"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/emailAdress"
                    android:text="@string/email"
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/userEmailAddress"
                    android:layout_span="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_span="7"
                    android:gravity="center_horizontal"
                    android:text="@string/statistics"
                    android:textSize="25sp"
                    android:layout_margin="10dp"
                    android:textStyle="bold" />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/win"
                    android:text="@string/win"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/draw"
                    android:text="@string/draw"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/lose"
                    android:text="@string/lose"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/totalHorizontal"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/winPercentage"
                    android:text="@string/win_percentage"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/easy"
                    android:text="@string/easy"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/easyWin"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/easyDraw"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/easyLose"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/easyTotal"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/easyWinPercentage"
                    android:layout_margin="10dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/hard"
                    android:text="@string/hard"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/hardWin"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/hardDraw"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/hardLose"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/hardTotal"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/hardWinPercentage"
                    android:layout_margin="10dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/friend"
                    android:text="@string/friend"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/friendWin"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/friendDraw"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/friendLose"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/friendTotal"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/friendWinPercentage"
                    android:layout_margin="10dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/totalVertical"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/totalWin"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/totalDraw"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/totalLose"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/totalTotal"
                    android:layout_margin="10dp"/>
            <TextView
                    android:id="@+id/totalWinPercentage"
                    android:layout_margin="10dp"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:id="@+id/footer"
            android:text="@string/short_burst_project"
            android:textColor="#CCCCCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>