<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/backgroundColor">
    <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:scaleType="centerCrop"
            android:layout_margin="25dp"
            app:layout_constraintTop_toBottomOf="@id/titel"/>
    <TextView
            android:id="@+id/titel"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="125dp"
            android:textSize="36sp"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/TextLoginNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_notice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.7"/>
    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextLoginNotice"/>
    <Button
            android:id="@+id/easy"
            android:text="@string/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.65"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/hard"
            android:text="@string/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/easy"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/p1vsp2"
            android:text="@string/p1vsp2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hard"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/signout"
            android:text="@string/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/p1vsp2"
            android:visibility="invisible"/>
    <ImageButton
            android:id="@+id/settingsButton"
            app:srcCompat="@drawable/settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            android:background="@color/backgroundColor"
            android:scaleType="fitCenter"/>

</androidx.constraintlayout.widget.ConstraintLayout>